# djangocms-structured-data

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
djangocms_structured_data/: __init__.py  apps.py  cms_config.py
djangocms_taxonomy/: admin.py  apps.py  cms_config.py  mixins.py  models.py  urls.py
djangocms_taxonomy/migrations/: 0001_initial.py
djangocms_taxonomy/serializers/: __init__.py
docs/: BUILD.md  Makefile  README.md  mixins.md  requirements.txt
docs/source/: conf.py  index.md
docs/source/explanation/: architecture.md  cte-optimization.md  design-decisions.md  generic-relations.md  index.md
docs/source/how-to/: category-filtering.md  custom-admin.md  index.md  multilingual-categories.md  performance.md
docs/source/reference/: admin.md  index.md  mixins.md  models.md  queryset.md
docs/source/tutorials/: admin.md  getting-started.md  index.md  integration.md  models.md
tests/: base.py  settings.py  test_admin.py  test_admin_mixin.py  test_cte.py  test_models.py  types.py  urls.py
tests/test_app/: admin.py  apps.py  models.py  tests.py
